--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "expo start",
     "start-server": "cd ../backend && nodemon server.js",
     "start-cache": "expo start -c",
-    "reset-project": "node ./scripts/reset-project.js",
-    "seed-data": "cd ../backend && node scripts/seedData.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
-    "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write"
+    "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
+    "seed-data": "cd ../backend && node scripts/seedData.js",
+    "reset-project": "node ./scripts/reset-project.js"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -34,11 +34,14 @@
     "nativewind": "latest",
     "react": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-actions-sheet": "^0.9.7",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-popup-menu": "^0.18.0",
     "react-native-reanimated": "~3.17.4",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-webview": "13.13.5",
     "tailwind-merge": "^3.3.1",
     "yup": "^1.6.1"
   },
