feat: Implement Google Sign-In functionality and token refresh mechanism
- Added GoogleSignInButton component for handling Google authentication.
- Integrated Google OAuth flow using expo-auth-session and related services.
- Updated useAuth hook to manage Google sign-in and linking accounts.
- Enhanced API service to include token refresh logic on 401/403 errors.
- Modified SubjectCard to display progress using a ProgressBar component.
- Updated Button component to include animated press feedback.
- Added refresh token management in AsyncStorage and API requests.
- Updated types and store to accommodate new authentication flow.
- Added necessary dependencies for Google authentication.

--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
       "tsconfigPaths": true
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-web-browser"
     ],
     "orientation": "portrait",
     "scheme": "physioprep",
