--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start",
     "start-server": "cd ../backend && nodemon server.js",
     "start-cache": "expo start -c",
+    "test-tscon": "npx tsc --noEmit",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -43,7 +44,10 @@
     "react-native-screens": "~4.11.1",
     "react-native-webview": "13.13.5",
     "tailwind-merge": "^3.3.1",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-auth-session": "~6.2.1",
+    "expo-crypto": "~14.1.5",
+    "expo-web-browser": "~14.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
