--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native-menu/menu": "^1.2.3",
     "@shopify/flash-list": "1.7.6",
     "ajv": "^8.17.1",
@@ -24,13 +25,16 @@
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "expo": "^53.0.11",
+    "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
+    "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.1",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
     "jotai": "^2.12.5",
     "nativewind": "latest",
     "react": "19.0.0",
@@ -44,10 +48,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-webview": "13.13.5",
     "tailwind-merge": "^3.3.1",
-    "yup": "^1.6.1",
-    "expo-auth-session": "~6.2.1",
-    "expo-crypto": "~14.1.5",
-    "expo-web-browser": "~14.2.0"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
