--- a/package.json
+++ b/package.json
@@ -25,10 +25,8 @@
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "expo": "^53.0.11",
-    "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
-    "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.1",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
@@ -38,7 +36,7 @@
     "jotai": "^2.12.5",
     "nativewind": "latest",
     "react": "19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "^0.79.5",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-popup-menu": "^0.18.0",
