chore: update expo and related dependencies to latest compatible versions

--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "ajv-keywords": "^5.1.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
-    "expo": "^53.0.11",
+    "expo": "~53.0.23",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
-    "expo-dev-client": "~5.2.1",
+    "expo-dev-client": "~5.2.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.0",
+    "expo-router": "~5.1.7",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.2.0",
     "jotai": "^2.12.5",
