--- a/eas.json
+++ b/eas.json
@@ -6,13 +6,16 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "packageManager": "npm"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "packageManager": "npm"
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "packageManager": "npm"
     }
   },
   "submit": {
