--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-google-signin/google-signin": "^16.0.0",
-    "@react-native-menu/menu": "^1.2.3",
     "@shopify/flash-list": "2.0.2",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
@@ -28,12 +27,13 @@
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.13",
-    "expo-linear-gradient": "~15.0.7",
     "expo-image": "~3.0.9",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.11",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.8",
     "jotai": "^2.12.5",
     "nativewind": "latest",
@@ -41,7 +41,6 @@
     "react-native": "0.81.4",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-gesture-handler": "^2.28.0",
-    "react-native-popup-menu": "^0.18.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "~5.6.0",
