fix: update icon paths in app.json and handle auth loading errors in index.tsx

--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
     ],
     "orientation": "portrait",
     "scheme": "physioprep",
-    "icon": "./assets/icon2.png",
+    "icon": "./assets/icon-main.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/icon2.png",
