--- a/eas.json
+++ b/eas.json
@@ -10,6 +10,7 @@
       "channel": "development"
     },
     "preview": {
+      "developmentClient": true,
       "distribution": "internal",
       "channel": "preview"
     },
