--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "expo": "^54.0.13",
     "expo-blur": "~15.0.7",
+    "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.13",
     "expo-image": "~3.0.9",
@@ -41,6 +42,7 @@
     "react-native": "0.81.4",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-google-mobile-ads": "^16.0.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "~5.6.0",
