--- a/package.json
+++ b/package.json
@@ -23,23 +23,23 @@
     "ajv-keywords": "^5.1.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
-    "expo": "^54.0.13",
+    "expo": "54.0.23",
     "expo-blur": "~15.0.7",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.9",
-    "expo-dev-client": "~6.0.13",
-    "expo-image": "~3.0.9",
+    "expo-dev-client": "~6.0.17",
+    "expo-image": "~3.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.11",
+    "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
-    "expo-web-browser": "~15.0.8",
+    "expo-web-browser": "~15.0.9",
     "jotai": "^2.12.5",
     "nativewind": "latest",
     "react": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-google-mobile-ads": "^16.0.0",
