feat: Integrate Stripe payment processing for Pro subscription; add payment hooks and API endpoints

--- a/app.json
+++ b/app.json
@@ -27,6 +27,13 @@
           "androidAppId": "ca-app-pub-3904519861823527~9083587054",
           "iosAppId": "ca-app-pub-3904519861823527~9083587054"
         }
+      ],
+      [
+        "@stripe/stripe-react-native",
+        {
+          "merchantIdentifier": "",
+          "enableGooglePay": true
+        }
       ]
     ],
     "orientation": "portrait",
