--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-actions-sheet": "^0.9.7",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-google-mobile-ads": "^16.0.0",
+    "react-native-razorpay": "^2.3.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "~5.6.0",
